Closed Bug 1324734 Opened 7 years ago Closed 7 years ago

Fix attribute of mp4_demuxer::BoxReader

Categories

(Core :: Audio/Video: Playback, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: wcpan, Assigned: wcpan)

Details

Attachments

(1 file)

Follow-up to bug 1298271.

Compiler complained about it and ignored the attribute.
Assignee: nobody → wpan
Comment on attachment 8820215 [details]
Bug 1324734 - Fix attribute of mp4_demuxer::BoxReader

https://reviewboard.mozilla.org/r/99742/#review100190
Attachment #8820215 - Flags: review?(jyavenard) → review+
Pushed by wpan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b5aa40dbdc18
Fix attribute of mp4_demuxer::BoxReader r=jya
https://hg.mozilla.org/mozilla-central/rev/b5aa40dbdc18
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: