Bug 1324734 - Fix attribute of mp4_demuxer::BoxReader r=jya

MozReview-Commit-ID: 3lZPH3a9AXt